--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Ubuntu:wght@700&display=swap');
+
 .App {
-  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.custom-tooltip {
+  --bs-tooltip-bg: var(--bs-primary);
+}
+
+.progress-container {
+  display: flex;
+  flex-direction: column;
+  padding-left:5% ;
+  padding-right:5% ;
+  padding-bottom:5% ;
+  padding-top: 3%;
+  border-color: #54c2cc;
+  border-style: solid;
+  border-width: 5px;
+  width: 40%;
+  border-radius: 15px;
+}
+
+.progress-div {
+  background-color: rgb(233, 233, 233);
+  border-radius: .5rem;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  justify-content: stretch;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #54c2cc;
+  padding: 1%;
+  background-color: #11242f;
+}
+
+.progress {
+  background-color: black;
+  color: black;
+  height: 10px;
+  border-radius: 1rem;
+  width: 75%;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  font-family: 'Lobster', cursive;
+} 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes progress {
+  0% {
+    width: 0;
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@keyframes spin {
+  from {transform:rotate(0deg);}
+  to {transform:rotate(360deg);}
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
