--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Ubuntu:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Ubuntu:wght@700&display=swap");
 
 .App {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .custom-tooltip {
@@ -11,9 +11,9 @@
 .progress-container {
   display: flex;
   flex-direction: column;
-  padding-left:5% ;
-  padding-right:5% ;
-  padding-bottom:5% ;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 5%;
   padding-top: 3%;
   border-color: #54c2cc;
   border-style: solid;
@@ -24,7 +24,7 @@
 
 .progress-div {
   background-color: rgb(233, 233, 233);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   margin-top: 10%;
   margin-bottom: 10%;
   justify-content: stretch;
@@ -44,8 +44,8 @@
 }
 
 .App-logo {
-  font-family: 'Lobster', cursive;
-} 
+  font-family: "Lobster", cursive;
+}
 
 @keyframes progress {
   0% {
@@ -58,9 +58,10 @@
 }
 
 @keyframes spin {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-
-
